--- a/src/main/resources/templates/include/customize.css
+++ b/src/main/resources/templates/include/customize.css
@@ -154,7 +154,7 @@ h1, h2, h3, h4, h5{
 
 
 .upload__box {
-  padding: 30px;
+  padding: 20px;
 }
 .upload__inputfile {
   width: 0.1px;
@@ -164,27 +164,69 @@ h1, h2, h3, h4, h5{
   position: absolute;
   z-index: -1;
 }
-.upload__btn {
+.upload__btn, .image-card-btn {
   display: inline-block;
   font-weight: 600;
   color: #fff;
   text-align: center;
-  min-width: 116px;
-  padding: 5px;
+  padding: 5px 10px; 
   transition: all 0.3s ease;
   cursor: pointer;
   border: 2px solid;
-  background-color: #4045ba;
-  border-color: #4045ba;
+  background-color: #007bff;
+  border-color: #007bff;
   border-radius: 10px;
   line-height: 26px;
   font-size: 14px;
 }
-.upload__btn:hover {
+.upload__btn:hover, .image-card-btn:hover {
   background-color: unset;
-  color: #4045ba;
+  color: #007bff;
   transition: all 0.3s ease;
 }
+
+.image-card-btn {
+  min-width: unset;           /* Bỏ min-width */
+  padding: 5px 10px;              /* Đặt lại padding */
+  width: auto;                /* Đảm bảo nút co giãn theo nội dung */
+  white-space: nowrap;        /* Ngăn nội dung xuống dòng */
+}
+
+.custom-blue-btn {
+  border-color: #007bff;
+  background-color: #fff;
+  color: #007bff;
+}
+
+.custom-blue-btn:hover {
+  background-color: #007bff; /* Đổi sang màu nền xanh */
+  color: #fff; /* Đổi chữ thành màu trắng */
+}
+
+.custom-green-btn {
+  border-color: #28a745;
+  background-color: #fff;
+  color: #28a745;
+}
+
+.custom-green-btn:hover {
+  background-color: #28a745; /* Đổi sang màu nền xanh */
+  color: #fff; /* Đổi chữ thành màu trắng */
+}
+
+.custom-red-btn {
+  border-color: #dc3545;
+  background-color: #fff;
+  color: #dc3545;
+}
+
+.custom-red-btn:hover {
+  background-color: #dc3545; /* Đổi sang màu nền đỏ */
+  color: #fff; /* Đổi chữ thành màu trắng */
+}
+
+
+
 .upload__btn-box {
   margin-bottom: 10px;
 }
@@ -222,4 +264,43 @@ h1, h2, h3, h4, h5{
   background-size: cover;
   position: relative;
   padding-bottom: 100%;
+}
+
+.image-card .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2); /* Nền đen với độ trong suốt */
+  display: flex;
+  justify-content: center; /* Căn giữa theo chiều ngang */
+  align-items: center; /* Căn giữa theo chiều dọc */
+  color: #fff;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  z-index: 2; /* Đảm bảo overlay nằm trên cùng */
+  pointer-events: none; /* Để không chặn các sự kiện click khác */
+}
+
+.image-card .img-bg {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+}
+
+.image-card .upload__img-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 24px;
+  height: 24px;
+  background-color: #ff4d4d;
+  border-radius: 50%;
+  z-index: 3;
+  cursor: pointer;
 }
