Addrole management UI, complete print, add tax to invoice and order

--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -97,12 +97,6 @@
                 <p>Danh mục dịch vụ</p>
               </a>
             </li>
-            <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
-              <a href="/blank.html" class="nav-link" id="category-management_blank">
-                <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
-                <p>Blank page</p>
-              </a>
-            </li>
           </ul>
         </li>
 
@@ -140,6 +134,45 @@
           </ul>
         </li>
 
+        <li class="nav-item">
+          <a href="#" class="nav-link" id="system-management">
+            <i class="nav-icon fa-solid fa-screwdriver-wrench"></i>
+            <p>
+              Quản lý hệ thống
+              <i class="fas fa-angle-left right"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview pl-2 sidebar-ul">
+            <li class="nav-item">
+              <a
+                href="/role-management"
+                class="nav-link"
+                id="system-management_role-management"
+              >
+              <i class="nav-icon fa-solid fa-users-gear"></i>
+                <p>Quản lý phân quyền</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="/common-parameter"
+                class="nav-link"
+                id="system-management_common-parameter"
+              >
+              <i class="nav-icon fa-solid fa-sliders"></i>
+                <p>Tham số chung</p>
+              </a>
+            </li>
+           
+          </ul>
+        </li>
+
+        <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
+          <a href="/blank.html" class="nav-link" id="category-management_blank">
+            <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
+            <p>Blank page</p>
+          </a>
+        </li>
         <li class="nav-item">
           <a href="pages/widgets.html" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
