--- a/src/main/resources/templates/provisional-invoice-print.html
+++ b/src/main/resources/templates/provisional-invoice-print.html
@@ -36,7 +36,7 @@
       <div class="col-12">
         <h2 class="page-header">
           <i class="fas fa-globe"></i> <span id="facility-name"> Facility Name</span>
-          <small class="float-right" id="print-at">Print at:</small>
+          <small class="float-right" id="print-at">In ngày:</small>
         </h2>
       </div>
       <!-- /.col -->
@@ -121,12 +121,12 @@
               <td class="col-sm-7 col-12" id="total-amount-info">-1</td>
           </tr>
           <tr class="row w-100">
-              <th class="col-sm-5 col-12">Giảm giá <small class="font-italic">(Discount)</small> (%) :</th>
-              <td class="col-sm-7 col-12" id="discount-info">-1</td>
+              <th class="col-sm-5 col-12">Thuế <small class="font-italic">(Tax)</small> (%) :</th>
+              <td class="col-sm-7 col-12" id="tax-info">0</td>
           </tr>
           <tr class="row w-100">
-              <th class="col-sm-5 col-12">Thuế <small class="font-italic">(Tax)</small> (%) :</th>
-              <td class="col-sm-7 col-12">0</td>
+              <th class="col-sm-5 col-12">Giảm giá <small class="font-italic">(Discount)</small> (%) :</th>
+              <td class="col-sm-7 col-12" id="discount-info">-1</td>
           </tr>
           <tr class="row w-100">
               <th class="col-sm-5 col-12">Tổng thanh toán <small class="font-italic">(Amount Due)</small> :</th>
