--- a/src/main/resources/templates/staff-service-reception.html
+++ b/src/main/resources/templates/staff-service-reception.html
@@ -223,7 +223,7 @@
 
                     <div class="row pb-3 pb-md-0">
                       <div class="col-md-12 d-flex">
-                        <button id="reset-btn" type="button" class="btn btn-outline-secondary ml-auto"><i class="fa-solid fa-arrow-rotate-left"></i> Reset</button>
+                        <button id="reset-btn" type="button" class="btn btn-outline-secondary ml-auto"><i class="fa-solid fa-arrow-rotate-left"></i> Đặt lại</button>
                         <button id="save-btn" type="button" class="btn btn-outline-success ml-2" data-state="add">Thêm</button>
                       </div>
                     </div>
@@ -358,7 +358,7 @@
                   <textarea wrap="soft" 
                             class="form-control" 
                             id="summary-input" 
-                            rows="5" maxlength="65000" 
+                            rows="7" maxlength="65000" 
                             placeholder="Tóm tắt vấn đề"
                   ></textarea>
                 </div>
@@ -369,7 +369,7 @@
                   <textarea wrap="soft" 
                             class="form-control" 
                             id="diagnose-input" 
-                            rows="5" maxlength="65000" 
+                            rows="7" maxlength="65000" 
                             placeholder="Chẩn đoán, đề xuất"
                   ></textarea>
                 </div>
@@ -384,12 +384,27 @@
                         <td class="col-sm-7 col-12" id="total-amount-info">-1</td>
                     </tr>
                     <tr class="row w-100">
+                      <th class="col-sm-5 col-12">Tax (%)</th>
+                      <td class="col-sm-7 col-12">
+                        <div class="dropdown w-100" s>
+                          <input id="tax-info" type="text" class="form-control dropdown-toggle h-auto w-100 p-0" placeholder="0" 
+                          aria-haspopup="true" aria-expanded="false" style="border: none;" value="0" maxlength="5" data-toggle="dropdown">
+                          <div class="dropdown-menu overflow-auto" aria-labelledby="tax-info" style="height: 150px;">
+                            <a class="dropdown-item tax-suggestion" role="button">0%</a>
+                            <a class="dropdown-item tax-suggestion" role="button">5%</a>
+                            <a class="dropdown-item tax-suggestion" role="button">8%</a>
+                            <a class="dropdown-item tax-suggestion" role="button">10%</a>
+                          </div>
+                        </div>  
+                      </td>
+                    </tr>
+                    <tr class="row w-100">
                         <th class="col-sm-5 col-12">Discount (%)</th>
                         <td class="col-sm-7 col-12">
-                          <div class="dropdown w-100" style="z-index: 1000;">
+                          <div class="dropdown w-100">
                             <input id="discount-info" type="text" class="form-control dropdown-toggle h-auto w-100 p-0" placeholder="0" 
-                            aria-haspopup="true" aria-expanded="false" style="border: none; z-index: 1000;" value="0" maxlength="5" data-toggle="dropdown">
-                            <div class="dropdown-menu overflow-auto" aria-labelledby="discount-info" style="z-index: 1000; height: 150px;">
+                            aria-haspopup="true" aria-expanded="false" style="border: none;" value="0" maxlength="5" data-toggle="dropdown">
+                            <div class="dropdown-menu overflow-auto" aria-labelledby="discount-info" style="height: 150px;">
                               <a class="dropdown-item discount-suggestion" role="button">5%</a>
                               <a class="dropdown-item discount-suggestion" role="button">10%</a>
                               <a class="dropdown-item discount-suggestion" role="button">20%</a>
@@ -424,12 +439,9 @@
                      title="Lưu thông tin odo, tóm tắt, phân tích và giảm giá (% discount)">
                     <i class="fa-regular fa-floppy-disk"></i> Save
                   </a>
-                  <a href="#" type="button" class="btn btn-outline-primary mr-md-2">
-                    <i class="fas fa-download"></i> PDF
-                  </a>
                   <a role="button" rel="noopener" id="print-btn" 
-                     class="btn btn-default">
-                    <i class="fas fa-print"></i> Print
+                     class="btn btn-outline-info">
+                  <i class="fas fa-print"></i> Print
                   </a>
                 </div>
                 
@@ -440,6 +452,7 @@
                   <button id="confirm-order-btn" type="button" class="btn btn-success">
                     <i class="far fa-credit-card"></i> Đã thanh toán
                   </button>
+                  <span id="invoice-status-info"></span>
                 </div>
               </div>      
             </div>
