edit preAuthorize of some class, new appointment management UI

--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <!-- SidebarSearch Form -->
-  <div class="form-inline">
+  <!-- <div class="form-inline">
     <div class="input-group" data-widget="sidebar-search">
       <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search" />
       <div class="input-group-append">
@@ -25,7 +25,7 @@
         </button>
       </div>
     </div>
-  </div>
+  </div> -->
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul
@@ -167,7 +167,14 @@
           </ul>
         </li>
 
-        <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
+        <li class="nav-item">
+          <a href="/my-profile.html" class="nav-link" id="category-management_blank">
+            <i class="nav-icon fa-regular fa-address-card"></i>
+            <p>Hồ sơ cá nhân</p>
+          </a>
+        </li>
+
+        <!-- <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
           <a href="/blank.html" class="nav-link" id="category-management_blank">
             <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
             <p>Blank page</p>
@@ -783,7 +790,7 @@
             <p>Informational</p>
           </a>
         </li>
-      </ul>
+      </ul> -->
     </nav>
     <!-- /.sidebar-menu -->
   </div>
