--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -9,10 +9,10 @@
   <!-- Sidebar user panel (optional) -->
   <div class="user-panel my-2 d-flex justify-content-center">
     <div class="image">
-      <img src="dist/img/mechanic.png" class="rounded" alt="User Image" />
+      <img src="/dist/img/mechanic.png" class="rounded" alt="User Image" />
     </div>
     <div class="info">
-      <a id="user-name-sidebar" href="#" class="d-block h5 text-center font-space-grotesk">Guest</a>
+      <a id="user-name-sidebar" href="/my-profile.html" class="d-block h5 text-center font-space-grotesk">Guest</a>
     </div>
   </div>
   <!-- SidebarSearch Form -->
@@ -54,6 +54,27 @@
           <a href="/cars" class="nav-link" id="cars">
             <i class="nav-icon fa-solid fa-truck-pickup"></i>
             <p>Danh sách xe</p>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="/service-history" class="nav-link" id="service-history">
+            <i class="nav-icon fa-regular fa-rectangle-list"></i>
+            <p>Lịch sử dịch vụ</p>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="/appointment" class="nav-link" id="appointment">
+            <i class="nav-icon fa-regular fa-calendar-check"></i>
+            <p>Quản lý đặt hẹn</p>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="/customer-appointment" class="nav-link" id="customer-appointment">
+            <i class="nav-icon fa-regular fa-calendar-check"></i>
+            <p>Đặt lịch hẹn</p>
           </a>
         </li>
 
