--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,11 +31,12 @@
       <!-- /.login-logo -->
       <div class="card card-outline card-primary">
         <div class="card-header text-center">
-          <a href="index.html" class="h1"><b>Spring </b>Detailing</a>
+          <img src="favicon.ico" alt="Spring Detailing Logo" class="brand-image img-fluid"
+          style="opacity: 0.8; width: 45%;" />
+          <p><a href="/index.html" class="h1 font-weight-bolder">Spring Detailing</a></p>
+          <!-- <p class="login-box-msg pb-1"><b>Your cars are mine</b></p> -->
         </div>
         <div class="card-body">
-          <p class="login-box-msg"><b>Your cars are mine</b></p>
-
           <form action="index3.html" method="post">
             <div class="input-group mb-3">
               <input id="email"  class="form-control" placeholder="Email" />
