--- a/src/main/resources/templates/customer-appointment.html
+++ b/src/main/resources/templates/customer-appointment.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Spring Detailing | Quản lý đặt hẹn</title>
+    <title>Spring Detailing | Đặt lịch hẹn</title>
   
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -34,11 +34,11 @@
     referrerpolicy="no-referrer"
   />
   <!-- daterange picker -->
-  <link rel="stylesheet" href="../../plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="/plugins/daterangepicker/daterangepicker.css">
   <!-- Bootstrap Color Picker -->
-  <link rel="stylesheet" href="../../plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css">
+  <link rel="stylesheet" href="/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css">
   <!-- Tempusdominus Bootstrap 4 -->
-  <link rel="stylesheet" href="../../plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <link rel="stylesheet" href="/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -85,12 +85,12 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Quản lý đặt hẹn</h1>
+              <h1>Đặt lịch hẹn</h1>
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="#" class="text-dark">Trang chủ</a></li>
-                <li class="breadcrumb-item active">Quản lý đặt hẹn</li>
+                <li class="breadcrumb-item active">Đặt lịch hẹn</li>
               </ol>
             </div>
           </div>
@@ -103,7 +103,7 @@
           <!-- Default box -->
           <div class="card mx-md-3">
             <div class="card-header">
-              <h3 class="card-title">Quản lý lịch hẹn, đặt lịch hẹn</h3>
+              <h3 class="card-title">Danh sách lịch hẹn của bạn</h3>
               <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
                   <i class="fas fa-minus"></i>
@@ -114,17 +114,17 @@
               <div class="row">
                 <div class="col-12 col-md-6">
                   <div class="form-group">
-                    <label>Tìm kiếm theo:</label>
+                    <label>Sắp xếp theo:</label>
                     <div class="form-group">
-                      <select id="search-type-select" class="form-control select2bs4" style="width: 100%;" data-placeholder="Chọn tiêu chí tìm kiếm">
-                        <option value="booking-time" selected>Lịch hẹn</option>
-                        <option value="create-time">Thời gian tạo cuộc hẹn</option>
+                      <select id="sorter-select" class="form-control select2bs4" style="width: 100%;" data-placeholder="Chọn kiểu sắp xếp">
+                        <option value=latest" selected>Mới nhất</option>
+                        <option value="earliest">Cũ nhất</option>
                       </select>
                     </div>
                   </div>
 
                   <!-- Date and time range -->
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <label>Chọn khoảng thời gian:</label>
 
                     <div class="input-group">
@@ -133,16 +133,15 @@
                       </div>
                       <input role="button" type="text" class="form-control float-right bg-white" id="reservationtime" readonly>
                     </div>
-                    <!-- /.input group -->
-                  </div>
+                  </div> -->
                   <!-- /.form group -->
                 </div>
               </div>
             </div>
 
             <div class="card-footer">
-              <button id="card-submit-btn" class="btn btn-primary">Lấy danh sách hẹn</button>
-              <button id="new-appointment-btn" class="btn btn-outline-success ml-1">Tạo cuộc hẹn</button>
+              <button id="card-reload-btn" class="btn btn-primary">Làm mới</button>
+              <button id="new-appointment-btn" class="btn btn-outline-success ml-1">Đặt hẹn</button>
             </div>
             <!-- /.card-footer-->
           </div>
@@ -234,6 +233,6 @@
   <script src="/dist/js/services/refreshTokenService.js"></script>
 
   <script src="/dist/js/demo.js" defer></script>
-  <script type="module" src="/dist/js/pages/appointment.js"></script>
+  <script type="module" src="/dist/js/pages/customer-appointment.js"></script>
 </body>
 </html>
